# misata

./: .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA-PROVENANCE.md  FEATURES.md  LIMITATIONS.md  MISATA_GLOSSARY.md  MISATA_VOICE.md  Misata_EDA_Report.ipynb  QUICKSTART.md  README.md  RELEASE_NOTES_v0.8.0.2.md  RELEASE_NOTES_v0.8.0.6.md  RELEASE_NOTES_v0.8.1.10.md  RELEASE_NOTES_v0.8.1.11.md  RELEASE_NOTES_v0.8.1.14.md  RELEASE_NOTES_v0.8.1.15.md  RELEASE_NOTES_v0.8.1.16.md  RELEASE_NOTES_v0.8.1.17.md  RELEASE_NOTES_v0.8.1.6.md  RELEASE_NOTES_v0.8.1.7.md  RELEASE_NOTES_v0.8.1.8.md  RELEASE_NOTES_v0.8.1.9.md  SECURITY.md  create_notebook.py  debug_causal.py  debug_integration.py  debug_quality.py  debug_ref_data.py  docs_seo_hook.py  dump.rdb  evaluate_data_realism.py  funding.json  generate_deep_data.py  glama.json  index.html  (+9 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
apps/api/: main.py  requirements.txt  worker.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
assets/: custom.css
benchmarks/: __init__.py  bench_generation.py  bench_research_moat.py
blog/: dbt-discourse-show-and-tell.md  synthetic-data-for-analytics-companies.md  synthetic-data-for-data-engineering.md
cli/: index.html
constraints/: index.html
database-seeding-python/: index.html
docs/: article-medium-devto.md  cli.md  constraints.md  database-seeding-python.md  domains.md  export.md  failure-modes.md  faker-vs-sdv-vs-misata.md  index.md  localisation.md  multi-table-synthetic-data.md  python-synthetic-data-generator.md  quickstart.md  resilience.md  spark.md  synthetic-data-for-bi-demos.md  timeseries.md  validate.md
docs/domains/: crm.md  crypto.md  ecommerce.md  edtech.md  fintech.md  fooddelivery.md  gaming.md  healthcare.md  hr.md  insurance.md  logistics.md  marketplace.md  pharma.md  realestate.md  saas.md  social.md  streaming.md  travel.md
docs/generation/: database.md  dict.md  incremental.md  index.md  llm.md  story.md  yaml.md
docs/guides/: anomaly-injection.md  conditional-columns.md  correlations.md  database-seeding-python.md  dbt-seed.md  distributions.md  faker-vs-sdv-vs-misata.md  from-ddl.md  geospatial.md  index.md  jupyter.md  long-form-text.md  mcp.md  mimic.md  multi-table-synthetic-data.md  narrative-patterns.md  outcome_curves.md  rate_curves.md  research-benchmarks.md  rest-api.md  streaming.md  synthetic-data-for-bi-demos.md  testing.md
domains/: index.html
domains/crm/: index.html
domains/crypto/: index.html
domains/ecommerce/: index.html
domains/edtech/: index.html
domains/fintech/: index.html
domains/fooddelivery/: index.html
domains/gaming/: index.html
domains/healthcare/: index.html
domains/hr/: index.html
domains/insurance/: index.html
domains/logistics/: index.html
domains/marketplace/: index.html
domains/pharma/: index.html
domains/realestate/: index.html
domains/saas/: index.html
domains/social/: index.html
examples/: bank_evalpack.py  bank_in_a_box.py  benchmark.py  bi_demo_dataset.py  build_demo_bundle.py  database_seeding_postgres.py  demo_pharma.py  demo_saas.py  ecommerce_seasonal.py  fintech_fraud_detection.py  fraud_typologies.py  gcc_banking.capsule.json  getting_started.ipynb  healthcare_multi_table.py  kaggle_synthetic_twin.ipynb  mimic_fidelity_proof.ipynb  multi_table_synthetic_data.py  narrative_to_data.py  provider_bakeoff.py  python_synthetic_data_generator.py  saas_revenue_curve.py
examples/dbt/: README.md  (+4 more)
export/: index.html
failure-modes/: index.html
faker-vs-sdv-vs-misata/: index.html
generation/: index.html
grant-applications/: foss-united-application.md
guides/: index.html
localisation/: index.html
misata/: __init__.py  anchor.py  api.py  assets.py  audit.py  benchmark.py  cache.py  capsule_registry.py  capsules.py  cli.py  codegen.py  coherence.py  compat.py  composer.py  conformance.py  constraints.py  curve_fitting.py  curve_inheritance.py  customization.py  db.py  dbt.py  dbt_import.py  ddl.py  documents.py  domain_capsule.py  domain_priors.py  evalpack.py  exceptions.py  export.py  feedback.py  fidelity.py  formulas.py  generators.py  geo.py  hybrid.py  introspect.py  kaggle_integration.py  lint.py  llm_parser.py  magic.py  (+39 more)
multi-table-synthetic-data/: index.html
notebooks/: quickstart.ipynb
python-synthetic-data-generator/: index.html
quickstart/: index.html
research/: 00_moat_and_scope.md  01_formalization.md  02_literature_and_verdict.md  03_paper_draft.md  04_specbench_design.md  05_literature_review.md  06_adversarial_review.md  07_adversarial_review_round2.md  08_adversarial_review_round3.md  09_adversarial_review_round4.md  10_adversarial_review_round5.md  11_adversarial_review_round6.md  ARXIV_SUBMISSION.md  LIBRARY_CHANGES.md  PAPER_WRITER_PROMPT.md  README.md  SPECBENCH_DATASHEET.md  WRITING_COACH_PROMPT.md  measure.py  paper.md  references.bib
resilience/: index.html
saas_test/: test_api_flow.py
schema/: misata.schema.json
search/: search_index.json
spark/: index.html
synthetic-data-for-bi-demos/: index.html
tests/: __init__.py  conftest.py  test_anchored.py  test_api.py  test_assets.py  test_balanced_ledger.py  test_bank_evalpack.py  test_bank_fraud_typologies.py  test_capsules.py  test_cli.py  test_coherence.py  test_composer.py  test_constraints.py  test_correlations.py  test_data_coherence.py  test_db_seed_sqlite.py  test_dbt.py  test_dbt_import.py  test_detection_report.py  test_dict_schema_formats.py  test_documents.py  test_domain_hardening.py  test_email_name_coherence.py  test_engine_conformance.py  test_enterprise.py  test_enterprise_identities.py  test_enterprise_simulation.py  test_evalpack.py  test_examples_run.py  test_formulas.py  test_fuzz_dict_schema.py  test_gaps.py  test_geo_microtext.py  test_group_shares.py  test_integration_scale.py  test_json_schema.py  test_llm_parser.py  test_locales.py  test_mcp_server.py  test_mimic_fidelity.py  (+31 more)
timeseries/: index.html
validate/: index.html
web/: package-lock.json  package.json
(+164 files in other folders)
